<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">公共体育设施管理系统</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="Login_username">请输入用户名</string>
    <string name="Login_paswd">请输入登录密码</string>
    <string name="Login_Button">登录</string>
    <string name="Login_login">用户登录</string>
    <string name="Login_Signup">新用户注册</string>
    <string name="Signup_Signup" translatable="false">用户注册</string>
    <string name="Signup_Newname">请输入新用户名</string>
    <string name="Signup_Stuno">请输入学号</string>
    <string name="Signup_passwd">请输入新密码</string>
    <string name="Signup_cerpasswd">请确认密码</string>
    <string name="Me_mycenter">个人中心</string>
    <string name="Me_myname">用户名</string>
    <string name="Me_Department">学院</string>
    <string-array name="Departments">
        <item>电子与信息工程学院</item>
        <item>经济与管理学院</item>
        <item>艺术与传媒学院</item>
        <item>机械与能源学院</item>
        <item>汽车学院</item>
        <item>轨道与交通学院</item>
        <item>软件学院</item>
        <item>中德学院</item>
    </string-array>
    <string-array name="Gender">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="Me_stuno">学号</string>
    <string name="Me_Username">同济篮球小霸王</string>
    <string name="Me_UserAvator">UserAvator</string>
    <string name="BotoomTab_Notification">预约提醒</string>
    <string name="BottomTab_Book">预约场馆</string>
    <string name="BottomTab_Mycenter">个人中心</string>
    <string name="Record_record">预约记录</string>
    <string name="Record_statium1">羽毛球馆</string>
    <string name="Campus1">嘉定校区</string>
    <string name="Campus2">四平校区</string>
    <string name="OrderStatus">预约已结束</string>
    <string name="Record_submit">提交于：</string>
    <string name="Record_stadium2">乒乓球馆</string>
    <string name="OderStatus2">预约已失效</string>
    <string name="Record_ReturnBT">返回主页</string>
    <string name="Record_date">预约时间段：</string>
    <string name="Record_connect">-</string>
    <string name="Record_date1">2019-5-20</string>
    <string name="Record_starttime1">14:00</string>
    <string name="Record_starttime2">10:30</string>
    <string name="Record_endtime1">16:00</string>
    <string name="Record_endtime2">11:30</string>
    <string name="Record_date2">2019-4-13</string>
    <string name="Gym_OpeningTime">开馆时间：</string>
    <string name="Gym_ClosingTime">闭馆时间：</string>
    <string name="Gym_OpeningTime_data1">9:00</string>
    <string name="Gym_OpeningTime_data2">9:30</string>
    <string name="Gym_OpeningTime_data3">10:00</string>
    <string name="Gym_OpeningTime_data4">9:00</string>
    <string name="Gym_ClosingTime_data1">20:00</string>
    <string name="Gym_ClosingTime_data2">20:30</string>
    <string name="Gym_ClosingTime_data3">21:00</string>
    <string name="Gym_ClosingTime_data4">21:30</string>
    <string name="Gym_ReturnBT">返回主页</string>
    <string name="Gym_ReservationBT">立即预约</string>
    <string name="Gym_Subtitle">场馆预约</string>
    <string name="Gym_name1">网球场</string>
    <string name="Gym_name2">篮球场</string>
    <string name="Gym_name3">羽毛球馆</string>
    <string name="Gym_name4">乒乓球馆</string>
    <string name="Remind_Subtitle">预约提醒</string>
    <string name="Remind_Gymname1">网球场</string>
    <string name="Remind_Gymname2">羽毛球馆</string>
    <string name="Remind_date">预约时间段：</string>
    <string name="Remind_date1">2019-5-20</string>
    <string name="Remind_date2">2019-5-29</string>
    <string name="Remind_starttime1">14:00</string>
    <string name="Remind_starttime2">17:00</string>
    <string name="Remind_endtime1">15:30</string>
    <string name="Remind_endtime2">19:00</string>
    <string name="Remind_state">预约状态：</string>
    <string name="Remind_state1">生效中</string>
    <string name="Remind_state2">未生效</string>
    <string name="Remind_dash">--</string>
    <string name="Remind_QRBT">扫码占用</string>
    <string name="Remind_CancelBT">取消预约</string>
    <string name="Reservation_Subtitle">开始预约</string>
    <string name="Reservation_gymname">网球场</string>
    <string name="Reservation_finishBT">提交预约</string>
    <string name="Reservation_cancelBT">取消预约</string>
    <string name="Reservation_date">预约日期</string>
    <string name="Reservation_starttime">起始时间</string>
    <string name="Reservation_endtime">结束时间</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Remind_GPSBT">内置定位</string>
    <string name="Remind_GPSGD">高德地图</string>
    <string name="Remind_GPSBD">百度地图</string>
    <string name="Reservation_Time1">7:00</string>
    <string name="Reservation_Time2">8:00</string>
    <string name="Reservation_Time3">9:00</string>
    <string name="Reservation_Time4">10:00</string>
    <string name="Reservation_Time5">11:00</string>
    <string name="Reservation_Time6">12:00</string>
    <string name="Reservation_Time7">13:00</string>
    <string name="Reservation_Time8">14:00</string>
    <string name="Reservation_Time9">15:00</string>
    <string name="Reservation_Time10">16:00</string>
    <string name="Reservation_Time11">17:00</string>
    <string name="Reservation_Time12">18:00</string>
    <string name="Reservation_Time13">19:00</string>
    <string name="Reservation_Time14">20:00</string>
    <string name="Reservation_Time15">21:00</string>
    <string name="Reservation_Time16">22:00</string>
    <integer name="A">9</integer>
</resources>
